service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: full-demo
    backstage.io/kubernetes-id: full-demo
  name: full-demo
  namespace: full-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: full-demo
  type: ClusterIP
